--- a/application-dev.yml
+++ b/application-dev.yml
@@ -30,8 +30,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: guest
-    password: guest
+    username: huangxing
+    password: HX528780
   http:
     multipart:
       max-file-size: 1000MB
